@@ -1,9 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.486 2005/11/18 02:55:59 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.487 2005/11/19 20:40:29 codeman Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  19 Nov 2005; Preston Cody <codeman@gentoo.org>
+  get_install_package_list added to InstallProfile.  This can be used by the FEs
 
   17 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
